--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,8 @@
-
-/* Your CSS Code here. */
+blocklqouote{
+	Background-color: Close to #f8fffe;
+    Font-weight: Bold;
+	max-width:600px;
+	margin:10px;
+	padding:15px;
+	border-left:8px solid green;
+}
